# AnimeSka-api

./: .gitignore  Dockerfile  Makefile  README.md  debug_stealth.py  episode_dump.html  frieren.html  inspect_animesdigital_search.py  inspect_animeshd_details.py  inspect_animesonlinecc_details.py  inspect_episode_page.py  inspect_static.py  inspect_video_network.py  onlinecc_dump.html  pyproject.toml  reproduce_crash.py  requirements.txt  server_log.txt  test_frieren.py  verify_all_sources.py  verify_local_details.py  verify_slugs.py
api/: index.py
app/: main.py  models.py
app/routers/: v1.py
app/scrapers/: animes_digital.py  animes_hd.py  animes_online_cc.py  base.py  better_animes.py
app/services/: anilist.py  discovery.py
scripts/: inspect_animeshd.py  inspect_site.py  test_enrichment.py  test_frieren_s2.py  test_priority.py  test_unified.py  verify_flow.py  verify_live.py  verify_local_details.py  verify_quick_play.py
