[project]
name = "animeska-api"
version = "1.0.0"
description = "FastAPI based scraper for diverse anime sources."
authors = [
    { name = "Developer", email = "developer@example.com" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "playwright",
    "beautifulsoup4",
    "httpx",
    "pydantic",
    "playwright-stealth"
]

[tool.uvicorn]
app = "app.main:app"
host = "0.0.0.0"
port = 8000
reload = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
